// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart should render correctly for a visual user 1`] = `
<DocumentFragment>
  <div
    class="page_wrapper"
    id="page_wrapper"
  >
    <div
      id="contents_wrapper"
    >
      <div
        class="header_container"
        data-test="header-container"
        id="header_container"
      >
        <div
          class="primary_header"
          data-test="primary-header"
        >
          <div
            id="menu_button_container"
          >
            <div>
              <div>
                <div
                  class="bm-burger-button"
                  style="z-index: 1000;"
                >
                  <button
                    id="react-burger-menu-btn"
                    style="position: absolute; left: 0px; top: 0px; z-index: 1; width: 100%; height: 100%; margin: 0px; padding: 0px; font-size: 0px; background: transparent; cursor: pointer;"
                    type="button"
                  >
                    Open Menu
                  </button>
                  <img
                    alt="Open Menu"
                    class="bm-icon visual_failure"
                    data-test="open-menu"
                    src="test-file-stub"
                    srcset="test-file-stub"
                    style="width: 100%; height: 100%;"
                  />
                </div>
              </div>
              <div
                aria-hidden="true"
                class="bm-menu-wrap"
                id=""
                style="position: fixed; z-index: 1100; width: 300px; height: 100%; transform: translate3d(-100%, 0, 0); transition: all 0.5s;"
              >
                <div
                  class="bm-menu"
                  style="height: 100%; box-sizing: border-box; overflow: auto;"
                >
                  <nav
                    class="bm-item-list"
                    style="height: 100%;"
                  >
                    <a
                      class="bm-item menu-item"
                      data-test="inventory-sidebar-link"
                      href="#"
                      id="inventory_sidebar_link"
                      style="display: block;"
                      tabindex="-1"
                    >
                      All Items
                    </a>
                    <a
                      class="bm-item menu-item"
                      data-test="about-sidebar-link"
                      href="https://saucelabs.com/"
                      id="about_sidebar_link"
                      style="display: block;"
                      tabindex="-1"
                    >
                      About
                    </a>
                    <a
                      class="bm-item menu-item"
                      data-test="logout-sidebar-link"
                      href="#"
                      id="logout_sidebar_link"
                      style="display: block;"
                      tabindex="-1"
                    >
                      Logout
                    </a>
                    <a
                      class="bm-item menu-item"
                      data-test="reset-sidebar-link"
                      href="#"
                      id="reset_sidebar_link"
                      style="display: block;"
                      tabindex="-1"
                    >
                      Reset App State
                    </a>
                  </nav>
                </div>
                <div>
                  <div
                    class="bm-cross-button"
                    style="position: absolute; width: 24px; height: 24px; right: 8px; top: 8px;"
                  >
                    <button
                      id="react-burger-cross-btn"
                      style="position: absolute; left: 0px; top: 0px; z-index: 1; width: 100%; height: 100%; margin: 0px; padding: 0px; font-size: 0px; background: transparent; cursor: pointer;"
                      tabindex="-1"
                      type="button"
                    >
                      Close Menu
                    </button>
                    <img
                      alt="Close Menu"
                      class="bm-cross visual_failure"
                      data-test="close-menu"
                      src="test-file-stub"
                      srcset="test-file-stub"
                      style="width: 100%; height: 100%;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="header_label"
          >
            <div
              class="app_logo"
            >
              Swag Labs
            </div>
          </div>
          <div
            class="shopping_cart_container visual_failure"
            id="shopping_cart_container"
          >
            <a
              class="shopping_cart_link"
              data-test="shopping-cart-link"
            />
          </div>
        </div>
        <div
          class="header_secondary_container"
          data-test="secondary-header"
        >
          <span
            class="title"
            data-test="title"
          >
            Your Cart
          </span>
        </div>
      </div>
      <div
        class="cart_contents_container"
        data-test="cart-contents-container"
        id="cart_contents_container"
      >
        <div>
          <div
            class="cart_list"
            data-test="cart-list"
          >
            <div
              class="cart_quantity_label"
              data-test="cart-quantity-label"
            >
              QTY
            </div>
            <div
              class="cart_desc_label"
              data-test="cart-desc-label"
            >
              Description
            </div>
          </div>
          <div
            class="cart_footer"
          >
            <button
              class="btn btn_secondary back btn_medium"
              data-test="continue-shopping"
              id="continue-shopping"
              name="continue-shopping"
            >
              <img
                alt="Go back"
                class="back-image"
                src="test-file-stub"
              />
              Continue Shopping
            </button>
            <button
              class="btn btn_action btn_medium checkout_button btn_visual_failure"
              data-test="checkout"
              id="checkout"
              name="checkout"
            >
              Checkout
            </button>
          </div>
        </div>
      </div>
    </div>
    <footer
      class="footer"
      data-test="footer"
    >
      <ul
        class="social"
      >
        <li
          class="social_twitter"
        >
          <a
            data-test="social-twitter"
            href="https://twitter.com/saucelabs"
            rel="noreferrer"
            target="_blank"
          >
            Twitter
          </a>
        </li>
        <li
          class="social_facebook"
        >
          <a
            data-test="social-facebook"
            href="https://www.facebook.com/saucelabs"
            rel="noreferrer"
            target="_blank"
          >
            Facebook
          </a>
        </li>
        <li
          class="social_linkedin"
        >
          <a
            data-test="social-linkedin"
            href="https://www.linkedin.com/company/sauce-labs/"
            rel="noreferrer"
            target="_blank"
          >
            LinkedIn
          </a>
        </li>
      </ul>
      <div
        class="footer_copy"
        data-test="footer-copy"
      >
        © 2026 Sauce Labs. All Rights Reserved. Terms of Service | Privacy Policy
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Cart should render correctly items 1`] = `
<DocumentFragment>
  <div
    class="page_wrapper"
    id="page_wrapper"
  >
    <div
      id="contents_wrapper"
    >
      <div
        class="header_container"
        data-test="header-container"
        id="header_container"
      >
        <div
          class="primary_header"
          data-test="primary-header"
        >
          <div
            id="menu_button_container"
          >
            <div>
              <div>
                <div
                  class="bm-burger-button"
                  style="z-index: 1000;"
                >
                  <button
                    id="react-burger-menu-btn"
                    style="position: absolute; left: 0px; top: 0px; z-index: 1; width: 100%; height: 100%; margin: 0px; padding: 0px; font-size: 0px; background: transparent; cursor: pointer;"
                    type="button"
                  >
                    Open Menu
                  </button>
                  <img
                    alt="Open Menu"
                    class="bm-icon"
                    data-test="open-menu"
                    src="test-file-stub"
                    srcset="test-file-stub"
                    style="width: 100%; height: 100%;"
                  />
                </div>
              </div>
              <div
                aria-hidden="true"
                class="bm-menu-wrap"
                id=""
                style="position: fixed; z-index: 1100; width: 300px; height: 100%; transform: translate3d(-100%, 0, 0); transition: all 0.5s;"
              >
                <div
                  class="bm-menu"
                  style="height: 100%; box-sizing: border-box; overflow: auto;"
                >
                  <nav
                    class="bm-item-list"
                    style="height: 100%;"
                  >
                    <a
                      class="bm-item menu-item"
                      data-test="inventory-sidebar-link"
                      href="#"
                      id="inventory_sidebar_link"
                      style="display: block;"
                      tabindex="-1"
                    >
                      All Items
                    </a>
                    <a
                      class="bm-item menu-item"
                      data-test="about-sidebar-link"
                      href="https://saucelabs.com/"
                      id="about_sidebar_link"
                      style="display: block;"
                      tabindex="-1"
                    >
                      About
                    </a>
                    <a
                      class="bm-item menu-item"
                      data-test="logout-sidebar-link"
                      href="#"
                      id="logout_sidebar_link"
                      style="display: block;"
                      tabindex="-1"
                    >
                      Logout
                    </a>
                    <a
                      class="bm-item menu-item"
                      data-test="reset-sidebar-link"
                      href="#"
                      id="reset_sidebar_link"
                      style="display: block;"
                      tabindex="-1"
                    >
                      Reset App State
                    </a>
                  </nav>
                </div>
                <div>
                  <div
                    class="bm-cross-button"
                    style="position: absolute; width: 24px; height: 24px; right: 8px; top: 8px;"
                  >
                    <button
                      id="react-burger-cross-btn"
                      style="position: absolute; left: 0px; top: 0px; z-index: 1; width: 100%; height: 100%; margin: 0px; padding: 0px; font-size: 0px; background: transparent; cursor: pointer;"
                      tabindex="-1"
                      type="button"
                    >
                      Close Menu
                    </button>
                    <img
                      alt="Close Menu"
                      class="bm-cross"
                      data-test="close-menu"
                      src="test-file-stub"
                      srcset="test-file-stub"
                      style="width: 100%; height: 100%;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="header_label"
          >
            <div
              class="app_logo"
            >
              Swag Labs
            </div>
          </div>
          <div
            class="shopping_cart_container"
            id="shopping_cart_container"
          >
            <a
              class="shopping_cart_link"
              data-test="shopping-cart-link"
            >
              <span
                class="shopping_cart_badge"
                data-test="shopping-cart-badge"
              >
                3
              </span>
            </a>
          </div>
        </div>
        <div
          class="header_secondary_container"
          data-test="secondary-header"
        >
          <span
            class="title"
            data-test="title"
          >
            Your Cart
          </span>
        </div>
      </div>
      <div
        class="cart_contents_container"
        data-test="cart-contents-container"
        id="cart_contents_container"
      >
        <div>
          <div
            class="cart_list"
            data-test="cart-list"
          >
            <div
              class="cart_quantity_label"
              data-test="cart-quantity-label"
            >
              QTY
            </div>
            <div
              class="cart_desc_label"
              data-test="cart-desc-label"
            >
              Description
            </div>
            <div
              class="cart_item"
              data-test="inventory-item"
            >
              <div
                class="cart_quantity"
                data-test="item-quantity"
              >
                1
              </div>
              <div
                class="cart_item_label"
              >
                <a
                  data-test="item-1-title-link"
                  href="#"
                  id="item_1_title_link"
                >
                  <div
                    class="inventory_item_name"
                    data-test="inventory-item-name"
                  >
                    Sauce Labs Bolt T-Shirt
                  </div>
                </a>
                <div
                  class="inventory_item_desc"
                  data-test="inventory-item-desc"
                >
                  Get your testing superhero on with the Sauce Labs bolt T-shirt. From American Apparel, 100% ringspun combed cotton, heather gray with red bolt.
                </div>
                <div
                  class="item_pricebar"
                >
                  <div
                    class="inventory_item_price"
                    data-test="inventory-item-price"
                  >
                    $15.99
                  </div>
                  <button
                    class="btn btn_secondary btn_small cart_button"
                    data-test="remove-sauce-labs-bolt-t-shirt"
                    id="remove-sauce-labs-bolt-t-shirt"
                    name="remove-sauce-labs-bolt-t-shirt"
                  >
                    Remove
                  </button>
                </div>
              </div>
            </div>
            <div
              class="cart_item"
              data-test="inventory-item"
            >
              <div
                class="cart_quantity"
                data-test="item-quantity"
              >
                1
              </div>
              <div
                class="cart_item_label"
              >
                <a
                  data-test="item-2-title-link"
                  href="#"
                  id="item_2_title_link"
                >
                  <div
                    class="inventory_item_name"
                    data-test="inventory-item-name"
                  >
                    Sauce Labs Onesie
                  </div>
                </a>
                <div
                  class="inventory_item_desc"
                  data-test="inventory-item-desc"
                >
                  Rib snap infant onesie for the junior automation engineer in development. Reinforced 3-snap bottom closure, two-needle hemmed sleeved and bottom won't unravel.
                </div>
                <div
                  class="item_pricebar"
                >
                  <div
                    class="inventory_item_price"
                    data-test="inventory-item-price"
                  >
                    $7.99
                  </div>
                  <button
                    class="btn btn_secondary btn_small cart_button"
                    data-test="remove-sauce-labs-onesie"
                    id="remove-sauce-labs-onesie"
                    name="remove-sauce-labs-onesie"
                  >
                    Remove
                  </button>
                </div>
              </div>
            </div>
            <div
              class="cart_item"
              data-test="inventory-item"
            >
              <div
                class="cart_quantity"
                data-test="item-quantity"
              >
                1
              </div>
              <div
                class="cart_item_label"
              >
                <a
                  data-test="item-3-title-link"
                  href="#"
                  id="item_3_title_link"
                >
                  <div
                    class="inventory_item_name"
                    data-test="inventory-item-name"
                  >
                    Test.allTheThings() T-Shirt (Red)
                  </div>
                </a>
                <div
                  class="inventory_item_desc"
                  data-test="inventory-item-desc"
                >
                  This classic Sauce Labs t-shirt is perfect to wear when cozying up to your keyboard to automate a few tests. Super-soft and comfy ringspun combed cotton.
                </div>
                <div
                  class="item_pricebar"
                >
                  <div
                    class="inventory_item_price"
                    data-test="inventory-item-price"
                  >
                    $15.99
                  </div>
                  <button
                    class="btn btn_secondary btn_small cart_button"
                    data-test="remove-test.allthethings()-t-shirt-(red)"
                    id="remove-test.allthethings()-t-shirt-(red)"
                    name="remove-test.allthethings()-t-shirt-(red)"
                  >
                    Remove
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="cart_footer"
          >
            <button
              class="btn btn_secondary back btn_medium"
              data-test="continue-shopping"
              id="continue-shopping"
              name="continue-shopping"
            >
              <img
                alt="Go back"
                class="back-image"
                src="test-file-stub"
              />
              Continue Shopping
            </button>
            <button
              class="btn btn_action btn_medium checkout_button "
              data-test="checkout"
              id="checkout"
              name="checkout"
            >
              Checkout
            </button>
          </div>
        </div>
      </div>
    </div>
    <footer
      class="footer"
      data-test="footer"
    >
      <ul
        class="social"
      >
        <li
          class="social_twitter"
        >
          <a
            data-test="social-twitter"
            href="https://twitter.com/saucelabs"
            rel="noreferrer"
            target="_blank"
          >
            Twitter
          </a>
        </li>
        <li
          class="social_facebook"
        >
          <a
            data-test="social-facebook"
            href="https://www.facebook.com/saucelabs"
            rel="noreferrer"
            target="_blank"
          >
            Facebook
          </a>
        </li>
        <li
          class="social_linkedin"
        >
          <a
            data-test="social-linkedin"
            href="https://www.linkedin.com/company/sauce-labs/"
            rel="noreferrer"
            target="_blank"
          >
            LinkedIn
          </a>
        </li>
      </ul>
      <div
        class="footer_copy"
        data-test="footer-copy"
      >
        © 2026 Sauce Labs. All Rights Reserved. Terms of Service | Privacy Policy
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Cart should render correctly without any items 1`] = `
<DocumentFragment>
  <div
    class="page_wrapper"
    id="page_wrapper"
  >
    <div
      id="contents_wrapper"
    >
      <div
        class="header_container"
        data-test="header-container"
        id="header_container"
      >
        <div
          class="primary_header"
          data-test="primary-header"
        >
          <div
            id="menu_button_container"
          >
            <div>
              <div>
                <div
                  class="bm-burger-button"
                  style="z-index: 1000;"
                >
                  <button
                    id="react-burger-menu-btn"
                    style="position: absolute; left: 0px; top: 0px; z-index: 1; width: 100%; height: 100%; margin: 0px; padding: 0px; font-size: 0px; background: transparent; cursor: pointer;"
                    type="button"
                  >
                    Open Menu
                  </button>
                  <img
                    alt="Open Menu"
                    class="bm-icon"
                    data-test="open-menu"
                    src="test-file-stub"
                    srcset="test-file-stub"
                    style="width: 100%; height: 100%;"
                  />
                </div>
              </div>
              <div
                aria-hidden="true"
                class="bm-menu-wrap"
                id=""
                style="position: fixed; z-index: 1100; width: 300px; height: 100%; transform: translate3d(-100%, 0, 0); transition: all 0.5s;"
              >
                <div
                  class="bm-menu"
                  style="height: 100%; box-sizing: border-box; overflow: auto;"
                >
                  <nav
                    class="bm-item-list"
                    style="height: 100%;"
                  >
                    <a
                      class="bm-item menu-item"
                      data-test="inventory-sidebar-link"
                      href="#"
                      id="inventory_sidebar_link"
                      style="display: block;"
                      tabindex="-1"
                    >
                      All Items
                    </a>
                    <a
                      class="bm-item menu-item"
                      data-test="about-sidebar-link"
                      href="https://saucelabs.com/"
                      id="about_sidebar_link"
                      style="display: block;"
                      tabindex="-1"
                    >
                      About
                    </a>
                    <a
                      class="bm-item menu-item"
                      data-test="logout-sidebar-link"
                      href="#"
                      id="logout_sidebar_link"
                      style="display: block;"
                      tabindex="-1"
                    >
                      Logout
                    </a>
                    <a
                      class="bm-item menu-item"
                      data-test="reset-sidebar-link"
                      href="#"
                      id="reset_sidebar_link"
                      style="display: block;"
                      tabindex="-1"
                    >
                      Reset App State
                    </a>
                  </nav>
                </div>
                <div>
                  <div
                    class="bm-cross-button"
                    style="position: absolute; width: 24px; height: 24px; right: 8px; top: 8px;"
                  >
                    <button
                      id="react-burger-cross-btn"
                      style="position: absolute; left: 0px; top: 0px; z-index: 1; width: 100%; height: 100%; margin: 0px; padding: 0px; font-size: 0px; background: transparent; cursor: pointer;"
                      tabindex="-1"
                      type="button"
                    >
                      Close Menu
                    </button>
                    <img
                      alt="Close Menu"
                      class="bm-cross"
                      data-test="close-menu"
                      src="test-file-stub"
                      srcset="test-file-stub"
                      style="width: 100%; height: 100%;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="header_label"
          >
            <div
              class="app_logo"
            >
              Swag Labs
            </div>
          </div>
          <div
            class="shopping_cart_container"
            id="shopping_cart_container"
          >
            <a
              class="shopping_cart_link"
              data-test="shopping-cart-link"
            />
          </div>
        </div>
        <div
          class="header_secondary_container"
          data-test="secondary-header"
        >
          <span
            class="title"
            data-test="title"
          >
            Your Cart
          </span>
        </div>
      </div>
      <div
        class="cart_contents_container"
        data-test="cart-contents-container"
        id="cart_contents_container"
      >
        <div>
          <div
            class="cart_list"
            data-test="cart-list"
          >
            <div
              class="cart_quantity_label"
              data-test="cart-quantity-label"
            >
              QTY
            </div>
            <div
              class="cart_desc_label"
              data-test="cart-desc-label"
            >
              Description
            </div>
          </div>
          <div
            class="cart_footer"
          >
            <button
              class="btn btn_secondary back btn_medium"
              data-test="continue-shopping"
              id="continue-shopping"
              name="continue-shopping"
            >
              <img
                alt="Go back"
                class="back-image"
                src="test-file-stub"
              />
              Continue Shopping
            </button>
            <button
              class="btn btn_action btn_medium checkout_button "
              data-test="checkout"
              id="checkout"
              name="checkout"
            >
              Checkout
            </button>
          </div>
        </div>
      </div>
    </div>
    <footer
      class="footer"
      data-test="footer"
    >
      <ul
        class="social"
      >
        <li
          class="social_twitter"
        >
          <a
            data-test="social-twitter"
            href="https://twitter.com/saucelabs"
            rel="noreferrer"
            target="_blank"
          >
            Twitter
          </a>
        </li>
        <li
          class="social_facebook"
        >
          <a
            data-test="social-facebook"
            href="https://www.facebook.com/saucelabs"
            rel="noreferrer"
            target="_blank"
          >
            Facebook
          </a>
        </li>
        <li
          class="social_linkedin"
        >
          <a
            data-test="social-linkedin"
            href="https://www.linkedin.com/company/sauce-labs/"
            rel="noreferrer"
            target="_blank"
          >
            LinkedIn
          </a>
        </li>
      </ul>
      <div
        class="footer_copy"
        data-test="footer-copy"
      >
        © 2026 Sauce Labs. All Rights Reserved. Terms of Service | Privacy Policy
      </div>
    </footer>
  </div>
</DocumentFragment>
`;
